[package]
name = "zquery"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
datafusion = "41.0.0"
dotenv = "0.15.0"
rustyline = "14.0.0"
tokio = { version = "1.40", features = ["full", "rt"] }
pretty_env_logger = "0.5.0"
arrow = "53.0.0"
#openssh = "0.11.0"
#home = "0.5.9"
serde_json = "1.0.125"
#rusqlite = {version = "0.32.1" , features = ["bundled"]}
async-trait = "0.1.82"
datafusion-expr = "41.0.0"
#serde = "1.0.209"
#futures = "0.3.30"