[package]
name = "zquery"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
datafusion = "41.0.0"
dotenv = "0.15.0"
rustyline = "14.0.0"
tokio = { version = "1.40", features = ["full", "rt"] }
pretty_env_logger = "0.5.0"
serde_json = "1.0.125"
async-trait = "0.1.82"
datafusion-expr = "41.0.0"
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
ssh2-config = "0.2.3"
